--- a/hayhay/resources/string.properties
+++ b/hayhay/resources/string.properties
@@ -1,4 +1,4 @@
-favorite_cate=Danh M\u1EE5c Yêu Thích
+favorite_cates=Danh M\u1EE5c Yêu Thích
 hot_news=Tin M\u1EDBi 
 news=Tin T\u1EE9c
 news.economic=Kinh T\u1EBF
@@ -15,12 +15,16 @@ news.startup=Kh\u1EDFi Nghi\u1EC7p
 news.construction=Xây D\u1EF1ng
 news.funny=C\u01B0\u1EDDi
 settings.mixnews=Hi\u1EC3n Th\u1ECB Tin Vi\u1EC7t Nam và ,Th\u1EBF Gi\u1EDBi Cùng Nhau
+favorite_countries=\u0110\u1ECDc Tin C\u1EE7a Các N\u01B0\u1EDBc 
 settings=C\u1EA5u Hình
 news.sience=Khoa H\u1ECDc
 news.politics=Chính Tr\u1ECB
 HotNews=Tin M\u1EDBi
 Economic=Kinh T\u1EBF
 Business=Kinh Doanh
+Politics=Chính Tr\u1ECB
+Science=Khoa H\u1ECDc
+Opinion=Quan \u0110i\u1EC3m
 Sport=Th\u1EC3 Thao
 Tech=Công Ngh\u1EC7
 StatUp=Kh\u1EDFi Nghi\u1EC7p
@@ -94,4 +98,4 @@ Soul=Góc Tâm H\u1ED3n
 Gender=Gi\u1EDBi Tính
 country.vn=Vi\u1EC7t Nam
 country.us=M\u1EF9
-
+country.china=Trung Qu\u1ED1c 
