--- a/hayhay/resources/string.properties
+++ b/hayhay/resources/string.properties
@@ -99,3 +99,8 @@ Gender=Gi\u1EDBi Tính
 country.vn=Vi\u1EC7t Nam
 country.us=M\u1EF9
 country.china=Trung Qu\u1ED1c 
+country.asian=N\u01B0\u1EDBc \u0110ông Nam Á 
+language.vn=Vi\u1EBFng Vi\u1EC7t
+language.en=Ti\u1EBFng Anh 
+language.china=Ti\u1EBFng Trung Qu\u1ED1c 
+setting.languages=Ngôn Ng\u1EEF Tin T\u1EE9c 
