--- a/hayhay/resources/string.properties
+++ b/hayhay/resources/string.properties
@@ -97,6 +97,7 @@ MomAndBaby=M\u1EB9 và Bé
 Soul=Góc Tâm H\u1ED3n
 Gender=Gi\u1EDBi Tính
 country.vn=Vi\u1EC7t Nam
+country.british=Anh
 country.us=M\u1EF9
 country.china=Trung Qu\u1ED1c 
 country.asian=N\u01B0\u1EDBc \u0110ông Nam Á 
